--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>trigenda-demo</title><link href="/css/app.b3414bc6.css" rel="preload" as="style"><link href="/js/app.54f493aa.js" rel="preload" as="script"><link href="/js/chunk-vendors.b403dbca.js" rel="preload" as="script"><link href="/css/app.b3414bc6.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but trigenda-demo doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.b403dbca.js"></script><script src="/js/app.54f493aa.js"></script></body></html>
+<html>
+<head>
+  <title>Title of the document</title>
+</head>
+
+<body>
+  <h1>This is a heading</h1>
+  <p>This is a paragraph.</p>
+</body>
+
+</html>
