--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html>
-<head>
-  <title>Title of the document</title>
-</head>
-
-<body>
-  <h1>This is a heading</h1>
-  <p>This is a paragraph.</p>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>portfolio</title><link href="/css/app.d9cf9f6f.css" rel="preload" as="style"><link href="/css/chunk-vendors.807fa17d.css" rel="preload" as="style"><link href="/js/app.6317db88.js" rel="preload" as="script"><link href="/js/chunk-vendors.ea3c4933.js" rel="preload" as="script"><link href="/css/chunk-vendors.807fa17d.css" rel="stylesheet"><link href="/css/app.d9cf9f6f.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but portfolio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.ea3c4933.js"></script><script src="/js/app.6317db88.js"></script></body></html>
